--- a/index.html
+++ b/index.html
@@ -9,6 +9,58 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
-        
+        <div claass="container-fluid">
+            <div class="row g-0">
+                <nav class="col-2 bg-light pr-3">
+                    <h1 class="h4 py-3 text-center text-primary">
+                        <i class="fas fa-ghost mr-2"></i>
+                        <span class="d-lg-inline">
+                        GHOST ADMIN
+                        </span> 
+                    </h1>
+                    <div class="list-group text-center text-lg-start">
+                        <span class="list-group-item disabled d-none d-lg-inline">
+                            <small>CONTROLS</small>
+                        </span>
+                        <a href="#" class="list-group-item list-group-item-action active" >
+                            <i class="fas fa-home"></i>
+                            <span class="d-none d-lg-inline">Dashboard</span>
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action" >
+                            <i class="fas fa-users"></i>
+                            <span class="d-none d-lg-inline">User</span>
+                            <span class="d-none d-lg-inline badge bg-danger rounded-pill float-end">20</span>
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action " >
+                            <i class="fas fa-chart-line"></i>
+                            <span class="d-none d-lg-inline">Statistics</span>
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action " >
+                            <i class="fas fa-flag"></i>
+                            <span class="d-none d-lg-inline">Report</span>
+                        </a>
+
+                    </div>
+                    <div class="list-group mt-4 text-center text-lg-start">
+                        <span class="list-group-item disabled d-none d-lg-block">
+                            <small>ACTIONS</small>
+                        </span>
+                        <a href="#" class="list-group-item list-group-item-action">
+                            <i class="fas fa-user"></i>
+                            <span class="d-none d-lg-inline">New User</span>
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action">
+                            <i class="fas fa-edit"></i>
+                            <span class="d-none d-lg-inline">Update Data</span>
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action">
+                            <i class="far fa-calendar-alt"></i>
+                            <span class="d-none d-lg-inline">Add Events</span>
+                        </a>
+                    </div>
+                </nav>
+                <main class="col-10 bg-secondary"></main>
+            </div>
+        <div>
     </body>
 </html>
