--- a/index.html
+++ b/index.html
@@ -59,7 +59,29 @@
                         </a>
                     </div>
                 </nav>
-                <main class="col-10 bg-secondary"></main>
+                <main class="col-10 bg-secondary">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+                        <div class="flex-fill"></div>
+                        <div class="navbar nav">
+                            <li class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                                    <i class="fas fa-user-circle"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#" class="dropdown-item">User Profile</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="dropdown-item">Logout</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link"><i class="fas fa-cog"></i></a>
+                            </li>
+                        </div>
+                        </nav>
+                </main>
             </div>
         <div>
     </body>
